Preparacion gradle para RecycleView y creacion de 3 tuplas en base de datos

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 18 16:53:18 CET 2016
-sdk.dir=/home/jalvarez/Android/Sdk
+#Sun Nov 20 16:02:59 CET 2016
+sdk.dir=C\:\\Users\\Haloman\\AppData\\Local\\Android\\Sdk
