Creacion del Indent para cambiar de paginas. Corregido orden en MySQL para el caso de la recycleview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<activity android:name=".PantallaAltaFilmActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>-->
+        <activity android:name=".PantallaAltaFilmActivity">
+        </activity>
     </application>
 
 </manifest>
