--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         </activity>
         <activity android:name=".PantallaAltaFilmActivity">
         </activity>
+        <activity android:name=".About"
+            android:label="@string/app_name_about"/>
     </application>
 
 </manifest>
