PantallaAltaFilmActivity, navigationDrawer, LisTitlesActivity main activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>-->
-        <activity android:name=".ListFilmActivity">
+        <activity android:name=".ListTitleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ListFilmActivity">
+        </activity>
+
+
         <activity android:name=".PantallaAltaFilmActivity">
         </activity>
         <activity android:name=".About"
