--- a/local.properties
+++ b/local.properties
@@ -7,10 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Tue Dec 27 15:23:06 CET 2016
+#Sun Jan 01 18:33:40 CET 2017
+>>>>>>>=0156792a01e8ab1f9097cba32894dd6101015cdf
 sdk.dir=C\:\\Users\\adela\\AppData\\Local\\Android\\Sdk
-=======
-#Sun Nov 20 16:02:59 CET 2016
-sdk.dir=C\:\\Users\\Haloman\\AppData\\Local\\Android\\Sdk
->>>>>>> 0156792a01e8ab1f9097cba32894dd6101015cdf
+\=\=\=\=\=\=
+<<<<<<<=HEAD
