--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
-  <!--      <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme">
+
+        <!--
+            <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>-->
+        </activity>
+        -->
         <activity android:name=".ListTitleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,15 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ListFilmActivity">
-        </activity>
-
-
-        <activity android:name=".PantallaAltaFilmActivity">
-        </activity>
-        <activity android:name=".About"
-            android:label="@string/app_name_about"/>
+        <activity android:name=".ListFilmActivity"></activity>
+        <activity android:name=".PantallaAltaFilmActivity"></activity>
+        <activity
+            android:name=".About"
+            android:label="@string/app_name_about" />
+        <activity android:name=".ListCalificarActivity"></activity>
     </application>
 
 </manifest>
