--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,36 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value="com.example.pr_idi.mydatabaseexample" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".ListFilmActivity"></activity>
-        <activity android:name=".PantallaAltaFilmActivity"></activity>
+        <activity android:name=".ListFilmActivity" />
+        <activity android:name=".PantallaAltaFilmActivity" />
         <activity
             android:name=".About"
             android:label="@string/app_name_about" />
-        <activity android:name=".ListCalificarActivity"></activity>
+        <activity android:name=".ListCalificarActivity" />
+        <activity
+            android:name=".SearchResultActivity"
+            android:label="@string/search_label"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity android:name=".ListTitlesSearchActivity"></activity>
     </application>
 
 </manifest>
