--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,9 @@
         <activity android:name=".ListTitleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
-
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value="com.example.pr_idi.mydatabaseexample" />
@@ -35,11 +32,24 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity android:name=".ListFilmActivity" />
+
         <activity android:name=".PantallaAltaFilmActivity" />
+
         <activity
             android:name=".About"
             android:label="@string/app_name_about" />
-        <activity android:name=".ListCalificarActivity" />
+        <activity android:name=".ListCalificarActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value="com.example.pr_idi.mydatabaseexample" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+
         <activity
             android:name=".SearchResultActivity"
             android:label="@string/search_label"
@@ -47,12 +57,22 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".ListTitlesSearchActivity"></activity>
+
+        <activity android:name=".ListTitlesSearchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value="com.example.pr_idi.mydatabaseexample" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
     </application>
 
 </manifest>
