--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,12 @@
         <activity android:name=".ListTitleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value="com.example.pr_idi.mydatabaseexample" />
@@ -31,17 +34,11 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".ListFilmActivity" />
-        <activity android:name=".PantallaAltaFilmActivity" />
-        <activity android:name=".ListFilmDeleteActivity"/>
-
-        <activity
-            android:name=".About"
-            android:label="@string/app_name_about" />
-        <activity android:name=".ListCalificarActivity" >
+        <activity android:name=".ListFilmActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value="com.example.pr_idi.mydatabaseexample" />
@@ -49,7 +46,23 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity android:name=".PantallaAltaFilmActivity" />
+        <activity android:name=".ListFilmDeleteActivity" />
+        <activity
+            android:name=".About"
+            android:label="@string/app_name_about" />
+        <activity android:name=".ListCalificarActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
 
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value="com.example.pr_idi.mydatabaseexample" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
         <activity
             android:name=".SearchResultActivity"
             android:label="@string/search_label"
@@ -57,15 +70,16 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-
         <activity android:name=".ListTitlesSearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value="com.example.pr_idi.mydatabaseexample" />
@@ -73,6 +87,8 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity android:name=".Help" />
+        <activity android:name=".BaseHelpDescriptionActivity"></activity>
     </application>
 
 </manifest>
