--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 01 18:33:40 CET 2017
->>>>>>>=0156792a01e8ab1f9097cba32894dd6101015cdf
-sdk.dir=C\:\\Users\\adela\\AppData\\Local\\Android\\Sdk
-\=\=\=\=\=\=
-<<<<<<<=HEAD
+#Tue Jan 10 15:10:38 CET 2017
+sdk.dir=/opt/android-sdks
